fixed scrolling error on ios and moved modal closing tag to be more viewable on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -274,14 +274,14 @@ blockquote{
     border: 1px solid #888;
     width: 80%;
     overflow-y: scroll;
-   -webkit-overflow-scrolling: touch;
-   height:100%; //A value other than height:auto needs to be set
+     -webkit-overflow-scrolling: touch;
+     height:100%;
 }
 
 .close {
     position: absolute;
     right: 25px;
-    top: 0;
+    top: 10px;
     color: #000;
     font-size: 54px;
     font-weight: bold;
